dataset1235/2025-2/805158916/users/2311811032/executions/1584167357_1319609354.log
== SUBMISSION (2025-08-27 14:13:14)
-- CODE: 
n1 = float(input('2.5'))
n2 = float(input('3.4'))

media = (n1 + n2) / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.45.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.49.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.49.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.47.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.48.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:13:12)
-- CODE: 
n1 = float(input('2.5'))
n2 = float(input('3.4'))

media = (n1 + n2) / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.45.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.49.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.49.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.47.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.48.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:02:31)
-- CODE: 
# Média Aritmética de Dois Números Reais

# 1 Entrada

# 1.1 Primeiro número
n1 = float(input('2.5'))

# 1.2 Segundo número
n2 = float(input('3.4'))

# 2 Comando
media = (n1 + n2) / 2

# 3 Saída
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.45.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.49.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.49.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.47.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.48.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:12:46)
-- CODE: 
n1 = float(input('2.5'))
n2 = float(input('3.4'))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.47.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.414.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.414.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.411.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.412.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.47.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:12:26)
-- CODE: 
n1 = float(input('2.5'))
n2 = float(input('3.4))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input('3.4))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input('3.4))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
-- ERROR:
File "XXXX", line 2
    n2 = float(input('3.4))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
-- ERROR:
File "XXXX", line 2
    n2 = float(input('3.4))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
-- ERROR:
File "XXXX", line 2
    n2 = float(input('3.4))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
-- ERROR:
File "XXXX", line 2
    n2 = float(input('3.4))
                     ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:36:52)
-- CODE: 
# Média aritmética de 2 números reais

# 1 Entrada

# 1.1 Primeiro número
n1 = float(input('2.5'))

# 1.2 Segundo número
n2 = float(input('3.4'))

# 2 Comando
media = (n1 + n2) / 2

# 3 Saída
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.45.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.49.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.49.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.47.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.48.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:36:51)
-- CODE: 
# Média aritmética de 2 números reais

# 1 Entrada

# 1.1 Primeiro número
n1 = float(input('2.5'))

# 1.2 Segundo número
n2 = float(input('3.4'))

# 2 Comando
media = (n1 + n2) / 2

# 3 Saída
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.45.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.49.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.49.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.47.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.48.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:34:09)
-- CODE: 
# Média Aritmética de 2 Números Reais

# 1 Entrada

# 1.1 Primeiro número
n1 = float(input('2.5'))

# 1.2 Segundo número
n2 = float(input('3.4'))

# 2 Comando
media = (n1 + n2) / 2

# 3 Saída
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.45.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.49.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.49.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.47.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.48.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:12:48)
-- CODE: 
n1 = float(input('2.5'))
n2 = float(input('3.4'))

media = n1 + n2 / 2
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.47.1
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.414.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.414.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.411.25
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.412.0
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.47.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:02:30)
-- CODE: 
# Média Aritmética de Dois Números Reais

# 1 Entrada

# 1.1 Primeiro número
n1 = float(input('2.5'))

# 1.2 Segundo número
n2 = float(input('3.4'))

# 2 Comando
media = (n1 + n2) / 2

# 3 Saída
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.45.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.49.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.49.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.47.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.48.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:34:10)
-- CODE: 
# Média Aritmética de 2 Números Reais

# 1 Entrada

# 1.1 Primeiro número
n1 = float(input('2.5'))

# 1.2 Segundo número
n2 = float(input('3.4'))

# 2 Comando
media = (n1 + n2) / 2

# 3 Saída
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.2
5.8
---- correct output:
5.0
---- user output:
2.53.45.0
-- TEST CASE 2:
---- input:
10.0
9.0
---- correct output:
9.5
---- user output:
2.53.49.5
-- TEST CASE 3:
---- input:
10.0
8.8
---- correct output:
9.4
---- user output:
2.53.49.4
-- TEST CASE 4:
---- input:
7.5
7.5
---- correct output:
7.5
---- user output:
2.53.47.5
-- TEST CASE 5:
---- input:
7.8
8.4
---- correct output:
8.1
---- user output:
2.53.48.1
-- TEST CASE 6:
---- input:
4.8
5.2
---- correct output:
5.0
---- user output:
2.53.45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
